# NeuraDock

./: .gitignore  .yamllint.yml  Makefile  README.md  README_EN.md  package.json  pnpm-lock.yaml
apps/: package.json
apps/desktop/src-tauri/: .coveragerc  Cargo.toml  icons  tarpaulin.toml  tauri.conf.json
apps/desktop/src-tauri/benches/: README.md
apps/desktop/src-tauri/config/ai_chat/: builtin_services.json
apps/desktop/src-tauri/config/providers/: builtin_providers.json
apps/desktop/src-tauri/crates/neuradock-app/: Cargo.toml  build.rs  tauri.conf.json
apps/desktop/src-tauri/crates/neuradock-app/capabilities/: default.json
apps/desktop/src-tauri/crates/neuradock-app/src/: lib.rs  main.rs
apps/desktop/src-tauri/crates/neuradock-app/src/application/: mod.rs  provider_seeder.rs
apps/desktop/src-tauri/crates/neuradock-app/src/presentation/: bootstrap.rs  commands.rs  error.rs  events.rs  ipc.rs  mod.rs  state.rs
apps/desktop/src-tauri/crates/neuradock-domain/: Cargo.toml
apps/desktop/src-tauri/crates/neuradock-domain/src/: lib.rs
apps/desktop/src-tauri/crates/neuradock-domain/src/account/: aggregate.rs  aggregate_test.rs  repository.rs  value_objects.rs
apps/desktop/src-tauri/crates/neuradock-domain/src/ai_chat/: aggregate.rs  mod.rs  repository.rs
apps/desktop/src-tauri/crates/neuradock-domain/src/balance/: mod.rs  repository.rs
apps/desktop/src-tauri/crates/neuradock-infrastructure/: Cargo.toml  build.rs
apps/desktop/src-tauri/crates/neuradock-infrastructure/migrations/: 20250201000001_remove_legacy_account_fields.sql  20251202000001_add_api_tokens.sql  20251203000001_add_custom_nodes.sql  20251215000001_add_standalone_keys.sql  20251216000001_create_independent_api_keys.sql  20251216000002_add_provider_api_paths.sql  20251217000001_add_provider_checkin_flags.sql  20251217000002_drop_standalone_keys.sql  20251219000001_fix_provider_created_at.sql  20251220000001_add_check_in_interval_hours.sql  20260202000001_create_ai_chat_services.sql  20260326000001_create_codex_accounts.sql  20260326000002_add_codex_rate_limit_windows.sql  20260326000003_add_codex_payment_session.sql
apps/desktop/src-tauri/crates/neuradock-infrastructure/src/: lib.rs
apps/desktop/src-tauri/crates/neuradock-infrastructure/tests/: account_repository_integration.rs  balance_history_repository_integration.rs  balance_repository_integration.rs  e2e_check_in_flow.rs  e2e_error_scenarios.rs  event_bus_integration_test.rs  seed_builtin_providers_integration.rs  session_repository_integration.rs  test_helpers.rs
apps/desktop/src-tauri/examples/: check_encryption.rs
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/migrations/: 20250121000001_initial_schema.sql  20250129000001_separate_session_balance.sql  20250130000002_encrypt_existing_credentials.sql
apps/desktop/src-tauri/src/: main.rs
apps/desktop/src-tauri/src/application/: mod.rs
apps/desktop/src-tauri/src/application/dtos/: mod.rs
apps/desktop/src-tauri/src/application/queries/: account_queries.rs  check_in_streak_queries.rs  mod.rs
apps/desktop/src-tauri/src/application/services/: check_in_executor.rs  config_service.rs  mod.rs  scheduler.rs
apps/desktop/src-tauri/src/domain/: mod.rs
apps/desktop/src-tauri/src/domain/account/: aggregate.rs  mod.rs  repository.rs  value_objects.rs
apps/desktop/src-tauri/src/domain/balance/: mod.rs  repository.rs
apps/desktop/src-tauri/src/domain/check_in/: aggregate.rs  domain_service.rs  mod.rs  provider.rs  repository.rs  value_objects.rs
apps/desktop/src-tauri/src/domain/events/: mod.rs
apps/desktop/src-tauri/src/domain/notification/: mod.rs
apps/desktop/src-tauri/src/domain/session/: mod.rs  repository.rs
apps/desktop/src-tauri/src/domain/shared/: mod.rs
apps/desktop/src-tauri/src/infrastructure/: mod.rs
apps/desktop/src-tauri/src/infrastructure/http/: client.rs  mod.rs  waf_bypass.rs
apps/desktop/src-tauri/src/infrastructure/monitoring/: performance.rs
apps/desktop/src-tauri/src/infrastructure/notification/: mod.rs
apps/desktop/src-tauri/src/infrastructure/persistence/: database.rs  mod.rs  unit_of_work.rs
apps/desktop/src-tauri/src/infrastructure/security/: mod.rs
apps/desktop/src-tauri/src/presentation/: commands.rs  events.rs  mod.rs  state.rs
apps/desktop/src-tauri/tests/: performance_benchmarks.rs
(+404 files in other folders)
