[workspace]
resolver = "2"
members = [
    "crates/neuradock-domain",
    "crates/neuradock-infrastructure",
    "crates/neuradock-app",
]

[workspace.package]
version = "0.1.0"
authors = ["NeuraDock"]
edition = "2021"
license = "MIT"

[workspace.dependencies]
# Internal crates
neuradock-domain = { path = "crates/neuradock-domain" }
neuradock-infrastructure = { path = "crates/neuradock-infrastructure" }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Async runtime
tokio = { version = "1.41", features = ["full"] }
async-trait = "0.1"
futures = "0.3"

# Time
chrono = { version = "0.4", features = ["serde"] }

# UUID
uuid = { version = "1.11", features = ["v4", "serde"] }

# Error handling
thiserror = "2.0"
anyhow = "1.0"

# Logging
log = "0.4"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Database
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "sqlite", "chrono", "uuid"] }

# HTTP client
reqwest = { version = "0.12", features = ["json", "cookies", "rustls-tls"] }

# Encryption
aes-gcm = "0.10"
argon2 = "0.5"
rand = "0.8"
base64 = "0.22"

# Browser automation
chromiumoxide = { version = "0.7", features = ["tokio-runtime"] }

# URL handling
url = { version = "2.5", features = ["serde"] }

# Cron scheduling
tokio-cron-scheduler = "0.13"

# Tauri
tauri = { version = "2.1", features = ["tray-icon", "image-png", "devtools"] }
tauri-plugin-dialog = "2.2"
tauri-plugin-fs = "2.2"
tauri-plugin-notification = "2.2"
tauri-plugin-os = "2.2"
tauri-plugin-shell = "2.2"
tauri-plugin-store = "2.2"

# Type-safe IPC
tauri-specta = { version = "2.0.0-rc.20", features = ["derive", "typescript"] }
specta = { version = "2.0.0-rc.20", features = ["derive", "chrono"] }
specta-typescript = "0.0.7"

# Email
lettre = { version = "0.11", default-features = false, features = ["tokio1-rustls-tls", "builder", "hostname", "smtp-transport"] }

# Dev dependencies
mockall = "0.13"
tempfile = "3.13"
